# rust-mos-hello-world

./: Cargo.toml  LICENSE-MIT  README.md
.devcontainer/: devcontainer.json
src/: main.rs
